Fix #7 - inactive options alignement

--- a/assets/css/styles-seb.css
+++ b/assets/css/styles-seb.css
@@ -372,7 +372,8 @@ footer {
             }
 
             .listing .actions .btn-icon i,
-            .parent_view .actions .btn-icon i {
+            .parent_view .actions .btn-icon i,
+            .listing .actions i {
                 line-height: 32px;
             }
 
